--- a/form+html+mysql/index.html
+++ b/form+html+mysql/index.html
@@ -23,6 +23,8 @@
             </select>
             <input type="submit" name="enviar" value="Enviar">            
         </form>
+
+        <p>Para consultar registros <a href="consultar.html"><strong><big>clique aqu</big>i.</strong></a></p>
     </div>
     
 </body>
